# simple_tables

./: .gitattributes  .gitignore  ALT_LICENSE  README.md  build_docs.sh  docs
.circleci/: config.yml
.circleci/.circleci/: config.yml
.github/: FUNDING.yml
core/: Cargo.toml  README.md
core/src/: error.rs  lib.rs
derive/: Cargo.toml
derive/src/: lib.rs
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/hash/: trait.Hash.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  (+5 more)
docs/simple_tables/: all.html  index.html  sidebar-items.js  trait.IdTable.html  trait.Table.html  trait.TableRow.html
docs/simple_tables/error/: enum.TableErrorKind.html  index.html  struct.TableError.html
docs/simple_tables/macros/: attr.table.html  attr.table_row.html  index.html
docs/simple_tables_core/: all.html  index.html  sidebar-items.js  trait.IdTable.html  trait.Table.html  trait.TableRow.html
docs/simple_tables_core/error/: enum.TableErrorKind.html  index.html  sidebar-items.js  struct.TableError.html
docs/simple_tables_derive/: all.html  attr.table.html  attr.table_row.html  index.html  sidebar-items.js
docs/src/proc_macro2/: detection.rs.html  fallback.rs.html  lib.rs.html  marker.rs.html  parse.rs.html  wrapper.rs.html
docs/src/quote/: ext.rs.html  format.rs.html  ident_fragment.rs.html  lib.rs.html  runtime.rs.html  spanned.rs.html  to_tokens.rs.html
docs/src/simple_tables/: lib.rs.html
docs/src/simple_tables_core/: error.rs.html  lib.rs.html
docs/src/simple_tables_derive/: lib.rs.html
docs/src/syn/: attr.rs.html  await.rs.html  bigint.rs.html  buffer.rs.html  custom_keyword.rs.html  custom_punctuation.rs.html  data.rs.html  derive.rs.html  discouraged.rs.html  error.rs.html  export.rs.html  expr.rs.html  ext.rs.html  file.rs.html  generics.rs.html  group.rs.html  ident.rs.html  item.rs.html  lib.rs.html  lifetime.rs.html  lit.rs.html  lookahead.rs.html  mac.rs.html  macros.rs.html  op.rs.html  parse.rs.html  parse_macro_input.rs.html  parse_quote.rs.html  pat.rs.html  path.rs.html  print.rs.html  punctuated.rs.html  reserved.rs.html  sealed.rs.html  span.rs.html  spanned.rs.html  stmt.rs.html  thread.rs.html  token.rs.html  ty.rs.html  (+2 more)
docs/src/unicode_xid/: lib.rs.html  tables.rs.html
docs/syn/: all.html  enum.BinOp.html  enum.Expr.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericMethodArgument.html  enum.ImplItem.html  enum.Item.html  enum.Pat.html  enum.RangeLimits.html  enum.Stmt.html  enum.TraitItem.html  enum.UseTree.html  index.html  struct.Arm.html  struct.Block.html  struct.Constraint.html  struct.DeriveInput.html  struct.ExprArray.html  struct.ExprAssign.html  struct.ExprAssignOp.html  struct.ExprAsync.html  struct.ExprAwait.html  struct.ExprBinary.html  struct.ExprBlock.html  struct.ExprBox.html  struct.ExprBreak.html  struct.ExprCall.html  struct.ExprCast.html  struct.ExprClosure.html  struct.ExprContinue.html  struct.ExprField.html  struct.ExprForLoop.html  struct.ExprGroup.html  struct.ExprIf.html  struct.ExprIndex.html  struct.ExprLet.html  struct.ExprLoop.html  struct.ExprMacro.html  struct.ExprMatch.html  (+72 more)
docs/syn/parse/: trait.Parse.html
res/: logo.afphoto
tables/: Cargo.toml
tables/.circleci/: config.yml
tables/src/: lib.rs
tables/tests/: error.rs  integration_tests.rs  table.rs  table_row.rs
(+13 files in other folders)
