[package]
name = "simple_tables-core"
version = "0.3.0-beta.2"
edition = "2021"
description = "The core functionality of the simple_tables crate"
license = "MIT OR Apache-2.0"
authors = ["Jonas Everaert <jonas.vbs4@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Jomy10/simple_tables"
documentation = "https://jomy10.github.io/simple_tables/simple_tables/index.html"
repository = "https://github.com/Jomy10/simple_tables"
keywords = ["tables", "table", "macros", "macro", "proc_macro"]
categories = ["data-structures", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]