[package]
name = "simple_tables-derive"
version = "0.1.1"
edition = "2021"
description = "Contains the procedural macros for the simple_tables crate"
license = "MIT OR Apache-2.0"
authors = ["Jonas Everaert <jonas.vbs4@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Jomy10/simple_tables"
documentation = "https://jomy10.github.io/simple_tables/simple_tables/index.html"
repository = "https://github.com/Jomy10/simple_tables"
keywords = ["tables", "table", "macros", "macro", "proc_macro"]
categories = ["data-structures", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.84", features = [ "full" ] }
quote = "1.0.14"
proc-macro2 = "1.0.36"
simple_tables-core = "0.1.1"