[package]
name = "simple-tables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-tables-derive = { path = "../derive" }
simple-tables-core = { path = "../core" }

[dev-dependencies]
trybuild = "1.0.54"