[package]
name = "simple_tables"
version = "0.1.1"
edition = "2021"
description = "An easy to use rust crate for creating table structures. Including macros for easily creating these table structures."
license = "MIT OR Apache-2.0"
authors = ["Jonas Everaert <jonas.vbs4@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Jomy10/simple_tables"
documentation = "https://jomy10.github.io/simple_tables/simple_tables/index.html"
repository = "https://github.com/Jomy10/simple_tables"
keywords = ["tables", "table", "macros", "macro", "proc_macro"]
categories = ["data-structures", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_tables-core = "0.1.1"
simple_tables-derive = "0.1.1"

[dev-dependencies]
trybuild = "1.0.54"